# Gstreamer-tutorial

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  convert_dot_to_png.sh
.devcontainer/: Dockerfile  devcontainer.json
BasicTutorials/: CMakeLists.txt
BasicTutorials/tutorial_1/: CMakeLists.txt  main.c
BasicTutorials/tutorial_12/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_13/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_2/: CMakeLists.txt  README.md  exercise.c  main.c
BasicTutorials/tutorial_3/: CMakeLists.txt  README.md  exercise.c  main.c
BasicTutorials/tutorial_4/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_5/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_6/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_7/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_8/: CMakeLists.txt  README.md  main.c
BasicTutorials/tutorial_9/: CMakeLists.txt  README.md  main.c
PlaybackTutorials/: CMakeLists.txt
PlaybackTutorials/tutorial_1/: CMakeLists.txt  README.md  main.c
PlaybackTutorials/tutorial_3/: CMakeLists.txt  main.c
PlaybackTutorials/tutorial_4/: CMakeLists.txt  README.md  main.c
PlaybackTutorials/tutorial_7/: CMakeLists.txt  README.md  exercise.c  main.c
PluginWritersGuide/: CMakeLists.txt
PluginWritersGuide/gst-plugin-tutorial/: CMakeLists.txt  testapp.c
PluginWritersGuide/gst-plugin-tutorial/plugins/: CMakeLists.txt  gsthelloworld.c  gsthelloworld.h  gstmyfilter.c  gstmyfilter.h
PluginWritersGuide/gst-plugin-tutorial/tests/: CMakeLists.txt  test_gstmyfilter.c
graph/: pipeline-NULL-READY.dot  pipeline-PAUSED-PLAYING.dot  pipeline-PLAYING.dot  pipeline-READY-PAUSED.dot  pipeline-STOP.dot
tutorial_1/: CMakeLists.txt  README.md  basic-tutorial1.c
tutorial_1/graph-all/: 0.00.00.028162178-pipeline-NULL-READY.dot  0.00.02.105087180-pipeline-READY-PAUSED.dot  0.00.02.111849250-pipeline-PAUSED-PLAYING.dot
tutorial_1/graph-media-type/: 0.00.00.017539621-pipeline-NULL-READY.dot  0.00.02.103991629-pipeline-READY-PAUSED.dot  0.00.02.110974398-pipeline-PAUSED-PLAYING.dot
tutorial_1/graph-states/: 0.00.00.016826626-pipeline-NULL-READY.dot  0.00.02.102786461-pipeline-READY-PAUSED.dot  0.00.02.108497335-pipeline-PAUSED-PLAYING.dot
tutorial_2/: CMakeLists.txt  README.md  basic-tutorial2.c  exercise.c  main.c
tutorial_2/graph/: 0.00.01.288529982-pipeline-NULL-READY.dot  0.00.01.326760109-pipeline-READY-PAUSED.dot
tutorial_2/graph-tutorial2/: 0.00.01.291329880-pipeline-NULL-READY.dot  0.00.01.327219918-pipeline-READY-PAUSED.dot
tutorial_3/: CMakeLists.txt  README.md  basic-tutorial-3.c  exercise.c  main.c  pipeline.dot
tutorial_3/graph/: pipeline-NULL-READY.dot  pipeline-PAUSED-PLAYING.dot  pipeline-READY-PAUSED.dot
tutorial_4/: CMakeLists.txt  README.md  main.c
tutorial_5/: CMakeLists.txt
tutorial_graph/: 0.00.01.277937815-gst-launch.NULL_READY.dot  0.00.01.313609700-gst-launch.READY_PAUSED.dot  0.00.01.315979025-gst-launch.PAUSED_PLAYING.dot  0.00.04.258918649-gst-launch.error.dot  0.00.04.283296911-gst-launch.PLAYING_READY.dot  script.sh
